--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "prettier": "^1.19.1",
     "raw-loader": "^4.0.1",
     "sass-loader": "^8.0.2",
-    "vue-svg-loader": "^0.16.0",
+    "vue-loader": "^15.9.3",
+    "vue-markdown-loader": "^2.4.1",
     "vue-template-compiler": "^2.6.11"
   }
 }
